--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>
       متجر ربط
     </title>
-    <link rel="shortcut icon" href="assets/images/fav.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/all.min.css">
     <link rel="stylesheet" href="assets/css/lib/animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
