--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="misara adel">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
-      متجر ربط
+      متجر 
     </title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/all.min.css">
@@ -25,7 +25,7 @@
             <div class="data">
               <img src="assets/images/pharmacy.webp" alt="" />
 
-              <p>اهلا بكم في متجر ربط</p>
+              <p>اهلا بكم في متجر </p>
             </div>
 
             <ul class="address-list">
@@ -63,7 +63,7 @@
         <div class="container">
           <div class="content">
             <a href="#" class="brand-name">
-              <img src="assets/images/logo.png" alt="">
+             متجر
             </a>
 
             <form class="form-contain">
@@ -3918,7 +3918,7 @@
           <div class="col-lg-4 col-12 mb-4">
             <div class="content">
               <a href="#" class="brand-name">
-                <img src="assets/images/logo.png" alt="">
+                logo
               </a>
 
               <p>
